[project]
name = "yellowcabfour"
version = "0.1.0"
description = ""
authors = [
    {name = "Aboubakar Koita",email = "makalou.bouba@pm.me"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{include = "yellowcabfour", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
