[project]
name = "yellowcabfour"
version = "0.1.0"
description = ""
authors = [
    {name = "Aboubakar Koita",email = "makalou.bouba@pm.me"},
    {name = "Astrid Chatin",email = "astrid.chatin@gmail.com"},
    {name = "Yongjing CHEN",email = "yongjing.chen@gmail.com"},
    {name = "Jean Philippe Meline"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"scikit-learn (>=1.6.1,<2.0.0)",
"mlflow (>=2.20.4,<3.0.0)",
"pandas (>=2.2.3,<3.0.0)",
"seaborn (>=0.13.2,<0.14.0)",
"numpy (>=2.2.3,<3.0.0)",
"scipy (>=1.15.2,<2.0.0)",
"gdown (>=5.2.0,<6.0.0)",
"fastapi (>=0.115.11,<0.116.0)",
"uvicorn (>=0.34.0,<0.35.0)",
]

[tool.poetry]
packages = [{include = "yellowcabfour", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
